# openenv-cyber-defense

./: Dockerfile  README.md  app.py  dump.txt  inference.py  openenv.yaml  output.txt  output_real.txt  output_utf8.txt  pyproject.toml  requirements.txt  test.py  test_autopilot.py  tmp_inspect.py  validate.txt  validate_final.txt  validate_final2.txt  validate_output.txt
demo/: run_demo.py  sample_episode.py
env/: __init__.py  environment.py  grader.py  reward.py  task.py  utils.py
my_env/: env.py  models.py  tasks.py
server/: app.py
static/: app.js  index.html  style.css
